client/src/components/pages/MakeSchedule.css
.new_schedule_title {
  font-size: 45px;
  font-weight: 400;
  color: var(--dark_copper_rust);
  margin-left: 50px;
  margin-top: 40px;
}

.new_schedule_flex {
  display: flex;
}

.new_sub_container {
  flex-grow: 1;
  flex-basis: 0;
}

.new_sub_container + .new_sub_container {
  margin-left: var(--m);
}

.new_schedules_container {
  background-color: #674ea7;
  box-shadow: 4px 4px 8px #888888;
  height: 90%;
  width: 100%;
  margin-left: 60px;
  border-radius: var(--m);
  padding-left: 20px;
  padding-right: 20px;
  border: 0px solid red;
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
}

.add_button,
.add_button:visited {
  font-size: 35px;
  font-family: "montserrat";
  color: var(--dark_copper_rust);
  padding: var(--m);
  border-radius: 16px;
  background-color: var(--primary);
  cursor: pointer;
  width: 50%;
  margin-top: 10%;
  margin-left: 30%;
  transition: all 0.3s ease-in;
  transition-property: all;
  transition-duration: 0.3s;
  transition-timing-function: ease-in;
  transition-delay: 0s;
}

.add_button:hover {
  color: var(--dark_copper_rust);
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
}

.time_format {
  margin-left: 5%;
  margin-top: 5%;
  color: var(--dark_copper_rust);
  font-size: 20px;
  font-weight: 300;
}

input {
  background: 0;
  border: 0;
  outline: none;
  width: 80vw;
  max-width: 400px;
  font-size: 20px;
  transition: padding 0.3s 0.2s ease;
}
input:focus {
  padding-bottom: 5px;
}
input:focus + .line:after {
  transform: scaleX(1);
}
.field {
  position: relative;
  margin-left: 30%;
  width: 700px;
}
.field .line {
  width: 100%;
  height: 3px;
  position: absolute;
  bottom: -8px;
  background: #bdc3c7;
}
.field .line:after {
  content: " ";
  position: absolute;
  float: right;
  width: 100%;
  height: 3px;
  transform: scalex(0);
  transition: transform 0.3s ease;
  background: var(--dark_copper_rust);
}

.new_sub_container_flex {
  display: flex;
  justify-content: space-evenly;
}
.container {
  max-width: 500px;
  margin: 30px auto;
  overflow: auto;
  min-height: 300px;
  border: 1px solid steelblue;
  padding: 30px;
  border-radius: 5px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.btn {
  display: inline-block;
  background: #000;
  color: #fff;
  border: none;
  padding: 10px 20px;
  margin: 5px;
  border-radius: 5px;
  cursor: pointer;
  text-decoration: none;
  font-size: 15px;
  font-family: inherit;
}

.btn:focus {
  outline: none;
}

.btn:active {
  transform: scale(0.98);
}

.btn-block {
  display: block;
  width: 100%;
}

.task {
  background: #f4f4f4;
  margin: 5px;
  padding: 10px 20px;
  cursor: pointer;
}

.task.reminder {
  border-left: 5px solid green;
}

.task h3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.add-form {
  margin-bottom: 40px;
}

.form-control {
  margin: 20px 0;
}

.form-control label {
  display: block;
}

.form-control input {
  width: 100%;
  height: 40px;
  margin: 5px;
  padding: 3px 7px;
  font-size: 17px;
}

.form-control-check {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.form-control-check label {
  flex: 1;
}

.form-control-check input {
  flex: 2;
  height: 20px;
}

.fixed_events_container {
  background-color: #d2c1b0;
  box-shadow: 10px 10px 8px #888888;
  height: 500px;
  width: 100%;
  margin-left: 5%;
  margin-bottom: 100px;
  border-radius: var(--m);
  display: block;
  border: 0px solid red;
  overflow-y: scroll;
  overflow-x: hidden;
}

.option_one_questions {
  margin-left: 30%;
  color: var(--dark_copper_rust);
}
input {
  width: 50%;
  background-color: var(--primary);
  border-radius: var(--s);
  font-size: 16px;
}

.boxText {
  font-size: 24px;
  color: var(--dark_copper_rust);
  width: 110%;
  font-weight: 400;
  background: linear-gradient(45deg, var(--primary), #f76b4f);
  border-radius: var(--s) var(--s) 0 0;
  padding: 15px;
  padding-left: 20px;
  box-shadow: 2px 2px 2px #5a0d79;
}

.fixedText {
  padding: 10%;
  padding-top: 20%;
  font-size: 35px;
  text-align: center;
  color: var(--primary);
  text-shadow: 1px 1px 2px var(--dark_copper_rust);
}

.generate_text {
  margin-left: 25%;
  color: var(--dark_copper_rust);
  margin-top: 20px;
  font-size: 30px;
}

.generate_button,
.generate_button:visited {
  font-size: 35px;
  font-family: "montserrat";
  color: var(--dark_copper_rust);
  padding: var(--m);
  border-radius: 16px;
  background-color: var(--primary);
  cursor: pointer;
  width: 50%;
  margin-top: 2%;
  margin-bottom: 2%;
  margin-left: 30%;
  transition: all 0.3s ease-in;
  transition-property: all;
  transition-duration: 0.3s;
  transition-timing-function: ease-in;
  transition-delay: 0s;
}

.generate_button:hover {
  color: var(--dark_copper_rust);
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
}

.sched_name_container {
  margin-left: 27%;
  margin-top: 2%;
  font-size: 20px;
  color: var(--dark_copper_rust);
}

.modal_design {
  background: #d2c1b0;
  height: 50%;
  width: 60%;
  margin-top: 10%;
  margin-left: 20%;
  padding: var(--m);
  border-radius: var(--s);
}

.celebrate_image {
  height: 50%;
  margin-left: 37%;
}

.tools_image {
  margin-top: 15%;
  width: 30%;
}

.think_image {
  margin-top: 5%;
  width: 30%;
}

.tools_image:hover,
.think_image:hover {
  /* Start the shake animation and make the animation last for 0.5 seconds */
  animation: shake 2s;

  /* When the animation is finished, start again */
  animation-iteration-count: infinite;
}

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }
  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }
  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }
  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }
  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}

